# uo2ics

./: .gitignore  Cargo.toml  LICENSE  README.md  uottawa.ics
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: course.rs  lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
src/: course.rs  main.rs
